tests/files/flow_controller_tests/should_run/059.cmdr
x = 3.14;
print abs(x);