tests/files/flow_controller_tests/should_fail/109.cmdr
x = true;
print arcsech(x);